[gd_scene load_steps=15 format=2]

[ext_resource path="res://Elementos/Visuais/Icones/Monitor.svg" type="Texture" id=1]
[ext_resource path="res://Cenas/CaixaDialogo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Elementos/Visuais/InternetFase2/Pergunta_10.png" type="Texture" id=3]
[ext_resource path="res://Cenas/BotaoHorizontal.tscn" type="PackedScene" id=4]
[ext_resource path="res://Cenas/FonteDetalhadaComicSans.tscn" type="PackedScene" id=5]
[ext_resource path="res://Codigos/TelaInternetFase2.gd" type="Script" id=6]
[ext_resource path="res://Elementos/Visuais/Fontes/Arial/arial.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Cenas/AudioAcerto.tscn" type="PackedScene" id=8]
[ext_resource path="res://Cenas/AudioErro.tscn" type="PackedScene" id=9]
[ext_resource path="res://Elementos/Visuais/Fundo/Rede.jpg" type="Texture" id=10]
[ext_resource path="res://Cenas/Painel.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxFlat" id=1]
border_width_left = 5
border_width_right = 5
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=3]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 22, 0 ), Vector2( -19, 0 ), Vector2( 17, 0 ), Vector2( -23, 0 ), Vector2( 21, 0 ), Vector2( 0, 0 ) ]
}

[node name="TelaInternetFase2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fundo" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.607843, 1, 0.713726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FundoTextura" type="Sprite" parent="."]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
self_modulate = Color( 0.607843, 1, 0.713726, 1 )
position = Vector2( -384, -688 )
texture = ExtResource( 10 )
centered = false

[node name="CaixaDialogo" parent="." instance=ExtResource( 2 )]

[node name="Texto" parent="CaixaDialogo/Margem/Elementos/Campo/Margem" index="0"]
text = "Texto Apresentacao."

[node name="Icone" parent="CaixaDialogo/Margem/Elementos/BotaoDireita/ConteinerVertical" index="0"]
margin_right = 223.0

[node name="Texto" parent="CaixaDialogo/Margem/Elementos/BotaoDireita/ConteinerVertical" index="1"]
margin_right = 223.0
text = "BotaoIr"

[node name="Tela" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -330.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Centro" type="CenterContainer" parent="Tela"]
margin_left = 960.0
margin_top = 375.0
margin_right = 960.0
margin_bottom = 375.0

[node name="Panel" type="Sprite" parent="Tela/Centro"]
self_modulate = Color( 0.745098, 0.992157, 0.498039, 1 )
texture = ExtResource( 1 )

[node name="Coluna" type="VBoxContainer" parent="Tela"]
margin_left = 481.0
margin_top = 49.0
margin_right = 1439.0
margin_bottom = 700.0

[node name="ListaInformacoes" type="HBoxContainer" parent="Tela/Coluna"]
margin_right = 958.0
margin_bottom = 493.0

[node name="Imagem" type="TextureRect" parent="Tela/Coluna/ListaInformacoes"]
margin_right = 439.0
margin_bottom = 493.0
rect_min_size = Vector2( 439, 493 )
texture = ExtResource( 3 )
stretch_mode = 6

[node name="Separador" type="VSeparator" parent="Tela/Coluna/ListaInformacoes"]
margin_left = 443.0
margin_right = 473.0
margin_bottom = 493.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 30

[node name="TextoErrado" parent="Tela/Coluna/ListaInformacoes" instance=ExtResource( 5 )]
visible = false
margin_left = 498.0
margin_right = 958.0
margin_bottom = 460.0
size_flags_horizontal = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_text = "InternetFase2_Pergunta_01"
text = "InternetFase2_Pergunta_01"

[node name="Texto" type="Label" parent="Tela/Coluna/ListaInformacoes"]
margin_left = 477.0
margin_right = 958.0
margin_bottom = 493.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 30
text = "InternetFase2_Pergunta_01"
autowrap = true

[node name="ListaBotoes" type="HBoxContainer" parent="Tela/Coluna"]
margin_top = 497.0
margin_right = 958.0
margin_bottom = 651.0
custom_constants/separation = 40

[node name="BotaoAceitar" parent="Tela/Coluna/ListaBotoes" instance=ExtResource( 4 )]
margin_right = 459.0
margin_bottom = 154.0
toggle_mode = true

[node name="Texto" parent="Tela/Coluna/ListaBotoes/BotaoAceitar/ConteinerHorizontal" index="1"]
margin_right = 491.0
text = "BotaoAceitar"

[node name="BotaoRecusar" parent="Tela/Coluna/ListaBotoes" instance=ExtResource( 4 )]
margin_left = 499.0
margin_right = 958.0
margin_bottom = 154.0
toggle_mode = true

[node name="Texto" parent="Tela/Coluna/ListaBotoes/BotaoRecusar/ConteinerHorizontal" index="1"]
margin_right = 500.0
text = "BotaoRecusar"

[node name="AudioAcerto" parent="." instance=ExtResource( 8 )]

[node name="AudioErro" parent="." instance=ExtResource( 9 )]

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Animar" type="AnimationPlayer" parent="Camera"]
anims/Tremer = SubResource( 3 )

[node name="Painel" parent="." instance=ExtResource( 11 )]
self_modulate = Color( 0.623529, 1, 0.309804, 1 )

[editable path="CaixaDialogo"]
[editable path="CaixaDialogo/Margem/Elementos/BotaoEsquerda"]
[editable path="CaixaDialogo/Margem/Elementos/BotaoDireita"]
[editable path="Tela/Coluna/ListaBotoes/BotaoAceitar"]
[editable path="Tela/Coluna/ListaBotoes/BotaoRecusar"]
